--- a/Games.html
+++ b/Games.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
                 <div class="card bg-white shadow-md rounded-xl overflow-hidden flex flex-col">
-                    <img src="portofolio-iqos/assets/screen.png.png" alt="Iqos img" class="h-48 w-full object-cover">
+                    <img src="portofolioIqos/assets/screen.png.png" alt="Iqos img" class="h-48 w-full object-cover">
                     <div class="p-4 flex flex-col flex-grow">
                         <h3 class="text-lg font-semibold text-blue-700 mb-2">Iqos smoking website</h3>
                         <p class="text-gray-600 mb-4 flex-grow">Σελίδα iqos για αγορές και πληροφορίες σχετικά με το IQOS</p>
@@ -101,7 +101,7 @@
                           <span class="bg-gray-100 p-3 text-blue-400 font-bold rounded-md shadow-lg cursor-pointer">tailwindcss</span>
                           <span class="bg-gray-100 p-3 text-yellow-500 font-bold rounded-md shadow-lg cursor-pointer">JavaScript</span>
                         </div>
-                        <a href="portofolio-iqos/index.html" class="mt-auto bg-blue-700 text-white px-4 py-2 rounded-md font-semibold text-center hover:bg-blue-800">Δοκίμασέ το</a>
+                        <a href="portofolioIqos/index.html" class="mt-auto bg-blue-700 text-white px-4 py-2 rounded-md font-semibold text-center hover:bg-blue-800">Δοκίμασέ το</a>
                     </div>
                 </div>
             </div>
@@ -117,6 +117,7 @@
 </body>
 <script src="index.js" defer></script>
 </html>
+
 
 
 
